  Mapscript (#3131)

- Few more fixes for high res output (#3157)

- Allow "DRIVER 'TEMPLATE'" or "DRIVER TEMPLATE" in output formats

- Correct sld generated from mapserver classes (#3133) 

- Correct libjpeg v7 compatability issue in old jpeg interface code (#3167)

- Correct FEATURE_COUNT limits on WMS GetFeatureInfo raster queries (#3168)


Version 5.6.0-beta3 (2009-10-07):
---------------------------------

- make RFC55 highres output be friendly with scaledependant rendering (#3157)

- avoid fractured and overlapping glyphs with angle follow (#2812)

- Fixed SDE layer seg fault (#3152)

- Fixed placement of labels using ANGLE AUTO which were not always positioned 
  correctly (#3160)

- Enable output of geometry in GML GetFeatureInfo if wms_geometries and
  wms_geom_type are specified (#2989)

- fix URN typo in mapwfs.c for urn:EPSG:geographicCRS:...

- don't apply scalefactor to label outlines (#3157)

- update namespaces and schema pointers (#2872)

- add RFC49 and RFC40 keywords to copy functions (#2865)

- minor fix to correct numberOfResults when maxfeatures is set in 
  mapfile (#2907)

- Fixed possible crash with WFS GetFeature when no projection is specified 
  at the map level (#3129)

- Fixed anchor point of vertically stacked bar graphs

- Fixed TEXT property that cannot be removed in the CLASS object. 
  PHP/Mapscript (#3063)

- Fixed use of minfeaturesize auto with curved labels (#3151)

- Fixed msRemoveHashTable function when 2 keys have the same hash (#3146)

- Fix raster thread deadlock condition on posix/linux (#3145)

- Do not route thread debug output through msDebug which requires locking.

- Fix WCS coverage metadata handling if size/resolution missing (#2683).

- Fix WCS crash with use of datasets that aren't physical files (#2901).

- Fix WCS failure with WCS 1.1 OGC URN (urn:ogc:def:crs:OGC::CRS84) (#3161).


Version 5.6.0-beta2 (2009-10-01):
---------------------------------
